--- a/index.html
+++ b/index.html
@@ -26,7 +26,16 @@
 	<source src="" type="">
 </video>
 </main>
-<aside><h2>Мої роботи</h2></aside>
+<aside>
+  <h2>Мої роботи</h2>
+  <a href="text.html" target="_blank"><button class="button-75" role="button"><span class="text">Перша робота</span></a>
+  <a href="animation.html" target="_blank"><button class="button-75" role="button"><span class="text">Друга робота</span></a>
+  <a href="animation1.html" target="_blank"><button class="button-75" role="button"><span class="text">Третя робота</span></a>
+  <a href="fonts.html" target="_blank"><button class="button-75" role="button"><span class="text">Четверта робота</span></a>
+  <a href="map.html" target="_blank"><button class="button-75" role="button"><span class="text">П'ята робота</span></a>
+  <a href="table.html" target="_blank"><button class="button-75" role="button"><span class="text">Шоста робота</span></a>
+  <a href="base.html" target="_blank"><button class="button-75" role="button"><span class="text">Сьома робота</span></a>
+</aside>
 <footer><h2>Мої контакти</h2></footer>
 </body>
 </html>
